assets/css/style.css
/*
* Prefixed by https://autoprefixer.github.io
* PostCSS: v7.0.29,
* Autoprefixer: v9.7.6
* Browsers: last 4 version
*/

/******************** Google Font Imports */
@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Staatliches&display=swap");

/******************** HTML and Body Reset and basic display settings */

body,
html {
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
}

body {
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  font-family: "Montserrat", sans-serif;
  background: black;
}

header,
footer {
  -webkit-box-flex: 0;
      -ms-flex: none;
          flex: none;
}

/******************** Nav Bar */

.navbar {
  width: 100%;
  padding: 0;
  text-align: right;
  z-index: 1;
}

/* 'Lava' render from Gimp Software (www.gimp.com) */
.banner-background {
  background: url("/assets/images/full-banner.png") black no-repeat center
    center fixed;
  background-size: cover;
  padding: 0;
}

/* Radial gradient (centre transparent, outer black) */
/* https://www.quirksmode.org/css/images/position.html */
.banner-gradient {
  background: -o-radial-gradient(at top, transparent 0%, black 80%);
  background: radial-gradient(at top, transparent 0%, black 80%);
  padding: inherit;
}

.navbar-brand {
  margin-right: 0;
  padding-top: 10px;
  padding-bottom: 4px;
  text-align: center;
  color: #fafafa;
}

.navbar-toggler {
  border: none;
}

.navbar-toggler-icon {
  color: #fafafa;
  font-size: 1.2em;
  padding-top: 10px;
  padding-bottom: 10px;
}

.primary-link {
  color: #fafafa;
  font-weight: 500;
  letter-spacing: 2px;
}

.navbar-nav .nav-item .nav-link {
  padding-right: 15px;
  padding-left: 15px;
  margin-left: 10px;
  margin-right: 10px;
}

.navbar-nav .nav-link:focus,
.navbar-nav .nav-link:hover {
  color: #fafafa;
}

/*************** Headings */

.main-logo {
  margin: 0 auto;
  padding-top: 10px;
  padding-bottom: 10px;
}

.heading-text {
  text-align: center;
  font-family: "Staatliches", sans-serif;
  letter-spacing: 6px;

  /* Removing spaces around span elements */
  /* https://stackoverflow.com/questions/25667401/how-to-remove-the-space-between-two-span-tags */
  font-size: 0;
}

.header-red {
  color: rgba(228, 22, 22, 0.75);
  font-size: 4rem;
  letter-spacing: 6px;
}

.header-white {
  color: #fafafa;
  font-size: 4rem;
  letter-spacing: 6px;
}

.header-icon {
  color: #fafafa;
  font-size: 3.5rem;
  letter-spacing: 6px;
}

/*************** Buttons */

.glass-button {
  display: inline-block;
  padding-top: 0.6em;
  padding-bottom: 0.6em;
  background: none;
  text-decoration: none;
  font-weight: 600;
  border: none;
  border-radius: 25%;
  text-align: center;
}

.glass-button a {
  text-decoration: none;
  color: #fafafa;
  letter-spacing: 2px;
  padding-left: 0.5em;
  padding-right: 0.5em;
}

/* Button Glow */
/* https://codepen.io/jpost-design/pen/EKZLzK */
/* Double box-shadow */
/* https://css-tricks.com/almanac/properties/b/box-shadow/ */

@-webkit-keyframes glowing {
  0% {
    -webkit-box-shadow: 0 0 -10px rgb(228, 22, 22, 0.75),
      inset 0 0 0px rgb(228, 22, 22, 0.75);
            box-shadow: 0 0 -10px rgb(228, 22, 22, 0.75),
      inset 0 0 0px rgb(228, 22, 22, 0.75);
  }
  40% {
    -webkit-box-shadow: 0 0 20px rgb(228, 22, 22, 0.75),
      inset 0 0 10px rgb(228, 22, 22, 0.75);
            box-shadow: 0 0 20px rgb(228, 22, 22, 0.75),
      inset 0 0 10px rgb(228, 22, 22, 0.75);
  }
  60% {
    -webkit-box-shadow: 0 0 20px rgb(228, 22, 22, 0.75),
      inset 0 0 10px rgb(228, 22, 22, 0.75);
            box-shadow: 0 0 20px rgb(228, 22, 22, 0.75),
      inset 0 0 10px rgb(228, 22, 22, 0.75);
  }
  100% {
    -webkit-box-shadow: 0 0 -10px rgb(228, 22, 22, 0.75, inset 0 0 0px
          rgb(228, 22, 22, 0.75));
            box-shadow: 0 0 -10px rgb(228, 22, 22, 0.75, inset 0 0 0px
          rgb(228, 22, 22, 0.75));
  }
}

@keyframes glowing {
  0% {
    -webkit-box-shadow: 0 0 -10px rgb(228, 22, 22, 0.75),
      inset 0 0 0px rgb(228, 22, 22, 0.75);
            box-shadow: 0 0 -10px rgb(228, 22, 22, 0.75),
      inset 0 0 0px rgb(228, 22, 22, 0.75);
  }
  40% {
    -webkit-box-shadow: 0 0 20px rgb(228, 22, 22, 0.75),
      inset 0 0 10px rgb(228, 22, 22, 0.75);
            box-shadow: 0 0 20px rgb(228, 22, 22, 0.75),
      inset 0 0 10px rgb(228, 22, 22, 0.75);
  }
  60% {
    -webkit-box-shadow: 0 0 20px rgb(228, 22, 22, 0.75),
      inset 0 0 10px rgb(228, 22, 22, 0.75);
            box-shadow: 0 0 20px rgb(228, 22, 22, 0.75),
      inset 0 0 10px rgb(228, 22, 22, 0.75);
  }
  100% {
    -webkit-box-shadow: 0 0 -10px rgb(228, 22, 22, 0.75, inset 0 0 0px
          rgb(228, 22, 22, 0.75));
            box-shadow: 0 0 -10px rgb(228, 22, 22, 0.75, inset 0 0 0px
          rgb(228, 22, 22, 0.75));
  }
}

.button-glow {
  -webkit-animation: glowing 5000ms infinite;
          animation: glowing 5000ms infinite;
}

/* Hover.css Effects */
/* https://github.com/IanLunn/Hover/blob/master/css/hover.css */

/* Grow */
.hvr-grow {
  display: inline-block;
  vertical-align: middle;
  -webkit-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);
  -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0);
          box-shadow: 0 0 1px rgba(0, 0, 0, 0);
  -webkit-transition-duration: 0.3s;
  -o-transition-duration: 0.3s;
     transition-duration: 0.3s;
  -webkit-transition-property: transform;
  -webkit-transition-property: -webkit-transform;
  transition-property: -webkit-transform;
  -o-transition-property: transform;
  transition-property: transform;
  transition-property: transform, -webkit-transform;
}
/* ... */

